add adjusment hijri api
