# docs/swagger.json
@@ -121,6 +121,29 @@
                 }
             }
         },
+        "/config-hijri-adjust": {
+            "get": {
+                "description": "Get a list of Hijri adjustments (year-agnostic, by month)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "App Config"
+                ],
+                "summary": "Get Hijri adjustment configuration",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.AppConfigResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/notifications/register": {
             "post": {
                 "security": [
@@ -150,6 +173,34 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/notifications/test-broadcast": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Force send daily reminder to all devices",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "Trigger Daily Reminder (Debug)",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -633,6 +684,20 @@
                 }
             }
         },
+        "dto.AppConfigResponse": {
+            "type": "object",
+            "properties": {
+                "hijri_adjustment": {
+                    "type": "integer"
+                },
+                "hijri_adjustments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.HijriAdjustmentDTO"
+                    }
+                }
+            }
+        },
         "dto.BulkActivityRequest": {
             "type": "object",
             "required": [
@@ -662,6 +727,17 @@
                 },
                 "sort": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.HijriAdjustmentDTO": {
+            "type": "object",
+            "properties": {
+                "adjustment": {
+                    "type": "integer"
+                },
+                "hijri_month": {
+                    "type": "integer"
                 }
             }
         },
@@ -764,6 +840,20 @@
                 "fcm_token"
             ],
             "properties": {
+                "app_version": {
+                    "type": "string"
+                },
+                "country_code": {
+                    "description": "Optional Location Info",
+                    "type": "string"
+                },
+                "device_model": {
+                    "description": "Optional Device Info",
+                    "type": "string"
+                },
+                "device_os_version": {
+                    "type": "string"
+                },
                 "fcm_token": {
                     "type": "string"
                 },
@@ -774,6 +864,9 @@
                         "ios",
                         "web"
                     ]
+                },
+                "timezone": {
+                    "type": "string"
                 }
             }
         },
